test_certificates/invalid_chain_of_trust/intermediate.csr
-----BEGIN CERTIFICATE REQUEST-----
MIIDDzCCAfcCAQAwgaUxCzAJBgNVBAYTAk5MMRAwDgYDVQQIDAdVdHJlY2h0MRAw
DgYDVQQHDAdMZWVyc3VtMSEwHwYDVQQKDBhJbnRlcm1lZGlhdGUgZnJvbSBTeXZl
bnQxETAPBgNVBAsMCFNlY3VyaXR5MRUwEwYDVQQDDAxJbnRlcm1lZGlhdGUxJTAj
BgkqhkiG9w0BCQEWFmludGVybWVkaWF0ZUBzeXZlbnQubmwwggEiMA0GCSqGSIb3
DQEBAQUAA4IBDwAwggEKAoIBAQCsEp2Zy9+KxsGbzxpziYwFB+J9fFhFnl/K5sVR
CTSI8o01UrL16Cwib2Ogi7fDCDZY69AGHOXae/Cc9FhQMhQqTHmGBJ9GsePj1def
WrNLqJjqqrWU0LtuMfkPLvQZBa1KSAvKc2x3KHB02EMnxSQ5G3sOpcsM+0u/t8In
EH30lO9kDAflrOEsGJRlHqvq5OxopOJMrQtrfmiKu0wvEppFhvg6lyKSW309aLMg
tIf+F3J5Bsr2sIeUesNVNM75XllCKJyOAq3IpkXPObu70bc1AnPUPE+t8PuNl3bK
Vsb1EL7RcjjjcWn2R5r81WTWrpsLwLoYhMnEna7i8jB59hQxAgMBAAGgJDAiBgkq
hkiG9w0BCQIxFQwTU3l2ZW50IEludGVybWVkaWF0ZTANBgkqhkiG9w0BAQsFAAOC
AQEAkeChIbfKCWO1lJK7TidAEnFoksOEoCoe+8IDtQ5wEZK4jrNZ1Kd32+5xQDfI
lh/cnxSwCIJs2Ywzin6Cx+rN4oBsCKeTQ/2mVcChruvV7sLgfE5T1Zs0N8Bjj2Hg
REdIQhSBIg3i4TA7z9Ql1T21Bn6abBSfjpj2yvaZuf9BgtKU3W1YQXIe2DMNCfb8
6bPuwV5LQ9tTUSRWtYPV/gNAcmlP9ARGvK32ejdS/umW2JjU+843JR3zlebEAcOg
JLhGVO7AK3M0GHeN6dKGNGb/NEk/sG/yN8NGZrY4/422cT83WAlpbQyNApadFG3y
2ZWVOqby5B7pdEldhToBECp7cQ==
-----END CERTIFICATE REQUEST-----
